--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       java: corretto11
   build:
     commands:
+      - update-ca-certificates -f
       - mvn clean install
   post_build:
     commands:
